--- a/app/src/main/res/layout/content_societe_list.xml
+++ b/app/src/main/res/layout/content_societe_list.xml
@@ -7,5 +7,11 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".action.Societe.SocieteListActivity"
     tools:showIn="@layout/activity_societe_list">
+<android.support.v7.widget.RecyclerView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/societeRecyclerView"
+    >
 
+</android.support.v7.widget.RecyclerView>
 </android.support.constraint.ConstraintLayout>
