--- a/app/src/main/res/layout/activity_societe_menu.xml
+++ b/app/src/main/res/layout/activity_societe_menu.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/background_stars"
     android:layout_width="match_parent"
+    android:background="#eaeaea"
     android:layout_height="match_parent">
-
 
 
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="172dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:clipToPadding="false"
@@ -20,7 +18,7 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        tools:layout_editor_absoluteY="-1dp">
 
         <android.support.v7.widget.CardView
             android:id="@+id/societeCardView"
@@ -28,12 +26,12 @@
             android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground">
+            android:foreground="?android:attr/selectableItemBackground"
+            android:onClick="manageCompany">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#d82020"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -41,6 +39,7 @@
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:padding="10dp"
+                    android:background="@drawable/cerclebackgroundpurple"
                     android:src="@drawable/ic_people_black_24dp" />
 
                 <TextView
@@ -48,14 +47,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="@string/societe"
-                    android:textColor="#FFFFFF"
                     android:textStyle="bold" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_margin="10dp"
-                    android:background="#FFFFFF" />
+                    android:background="@color/lightGrey" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -79,7 +77,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#9e2ac1"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -87,6 +84,7 @@
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:padding="10dp"
+                    android:background="@drawable/cerclebackgroundpink"
                     android:src="@drawable/ic_widgets_black_24dp" />
 
                 <TextView
@@ -94,14 +92,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="Projects"
-                    android:textColor="#FFFFFF"
                     android:textStyle="bold" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_margin="10dp"
-                    android:background="#FFFFFF" />
+                    android:background="@color/lightGrey" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -114,10 +111,11 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="167dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -140,7 +138,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#188092"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -148,6 +145,7 @@
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:padding="10dp"
+                    android:background="@drawable/cerclebackgroundgreen"
                     android:src="@drawable/ic_monetization_on_black_24dp" />
 
                 <TextView
@@ -155,14 +153,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="Expenses"
-                    android:textColor="#FFFFFF"
                     android:textStyle="bold" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_margin="10dp"
-                    android:background="#FFFFFF" />
+                    android:background="@color/lightGrey" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -186,7 +183,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#ea6117"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -194,6 +190,7 @@
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:padding="10dp"
+                    android:background="@drawable/cerclebackgroundyello"
                     android:src="@drawable/ic_assignment_black_24dp" />
 
                 <TextView
@@ -201,14 +198,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="Tasks"
-                    android:textColor="#FFFFFF"
                     android:textStyle="bold" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_margin="10dp"
-                    android:background="#FFFFFF" />
+                    android:background="@color/lightGrey" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -221,6 +217,7 @@
             </LinearLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -241,13 +238,13 @@
             android:layout_height="150dp"
             android:layout_margin="10dp"
             android:clickable="true"
+            android:onClick="testStatistics"
             android:foreground="?android:attr/selectableItemBackground">
 
             <LinearLayout
 
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#199346"
+                android:layout_height="147dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -255,6 +252,7 @@
                     android:layout_width="64dp"
                     android:layout_height="64dp"
                     android:padding="10dp"
+                    android:background="@drawable/cerclebackgroundpurple"
                     android:src="@drawable/ic_show_chart_black_24dp" />
 
                 <TextView
@@ -262,14 +260,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="Statistics"
-                    android:textColor="#FFFFFF"
                     android:textStyle="bold" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_margin="10dp"
-                    android:background="#FFFFFF" />
+                    android:background="@color/lightGrey" />
 
                 <TextView
                     android:layout_width="wrap_content"
