--- a/app/src/main/res/layout/item_societe_list.xml
+++ b/app/src/main/res/layout/item_societe_list.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/societe_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="10dp"
+    android:orientation="horizontal"
     android:paddingBottom="10dp"
-    >
+    android:paddingTop="10dp">
 
     <TextView
         android:id="@+id/societe_raisonSociale"
@@ -21,7 +20,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/message_button"
+        android:id="@+id/societe_seeMore"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:drawableEnd="@drawable/ic_more_vert_black_24dp"
