Added a test of a pieChart and a side menu

--- a/app/src/main/res/layout/activity_societe_menu.xml
+++ b/app/src/main/res/layout/activity_societe_menu.xml
@@ -133,7 +133,8 @@
             android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:clickable="true"
-            android:foreground="?android:attr/selectableItemBackground">
+            android:foreground="?android:attr/selectableItemBackground"
+            android:onClick="manageExpenses">
 
             <LinearLayout
                 android:layout_width="match_parent"
