--- a/app/src/main/res/layout/content_side_menu.xml
+++ b/app/src/main/res/layout/content_side_menu.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".action.SideMenuActivity"
+    tools:context=".action.menu.SideMenuActivity"
     tools:showIn="@layout/app_bar_side_menu">
 
     <FrameLayout
         android:id="@+id/content_frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="506dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -24,8 +24,8 @@
     </FrameLayout>
 
     <include
-        layout="@layout/activity_societe_menu"
+        layout="@layout/activity_menu"
         android:layout_width="match_parent"
-        android:layout_height="629dp" />
+        android:layout_height="500dp" />
 
 </android.support.constraint.ConstraintLayout>
