--- a/app/src/main/res/layout/item_depense_list.xml
+++ b/app/src/main/res/layout/item_depense_list.xml
@@ -8,6 +8,7 @@
     android:orientation="horizontal"
     android:paddingBottom="10dp"
     android:paddingTop="10dp"
+    android:clickable="true"
     tools:layout_editor_absoluteY="81dp">
 
     <TextView
@@ -15,47 +16,56 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginEnd="38dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_weight="1"
         android:text="15-05-2018 at 15:30 "
         android:textAlignment="textStart"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/depense_seeMore"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/depense_montant"
         android:layout_width="196dp"
-        android:layout_height="25dp"
+        android:layout_height="26dp"
 
-        android:layout_marginEnd="82dp"
-        android:layout_marginStart="33dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
         android:layout_weight="1"
         android:text="200 000 DHs "
         android:textAlignment="textStart"
         android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@+id/depense_seeMore"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.128"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/depense_date" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.2" />
 
     <TextView
         android:id="@+id/depense_seeMore"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginBottom="25dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="26dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:drawableEnd="@drawable/ic_more_vert_black_24dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/depense_date"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
     </TextView>
