--- a/app/src/main/res/layout/content_projet_list.xml
+++ b/app/src/main/res/layout/content_projet_list.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".action.societe.SocieteListActivity"
-    tools:showIn="@layout/activity_societe_list">
+    tools:context=".action.projet.ProjetListActivity"
+    tools:showIn="@layout/activity_projet_list">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/societeRecyclerView"
+        android:id="@+id/projetRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
