--- a/app/src/main/res/layout/content_side_menu.xml
+++ b/app/src/main/res/layout/content_side_menu.xml
@@ -24,7 +24,7 @@
     </FrameLayout>
 
     <include
-        layout="@layout/activity_societe_menu"
+        layout="@layout/activity_menu"
         android:layout_width="match_parent"
         android:layout_height="629dp" />
 
