--- a/app/src/main/res/layout/item_societe_list.xml
+++ b/app/src/main/res/layout/item_societe_list.xml
@@ -11,7 +11,7 @@
         android:id="@+id/societe_raisonSociale"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_weight="1"
         android:text="@string/societe"
 
