--- a/app/src/main/res/layout/activity_projet_create.xml
+++ b/app/src/main/res/layout/activity_projet_create.xml
@@ -29,7 +29,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:hint="Budged (DH)"
+        android:hint="Budget Estimé (DH)"
         android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
